syntax = "proto3";

package swing.v1;
option go_package = "./pb";

message Empty {}

message ErrorBodyResponse {
    bool error = 1;
    uint32 code = 2;
    string message = 3;
}

enum Direction {
    DESC = 0;
    ASC = 1;
}

message Sort {
    string column = 1;
    string direction = 2;
}

message PaginationResponse {
    int32 limit = 1;
    int32 page = 2;
    int64 totalRows = 3;   
    int32 totalPages = 4;   
}

message HealthCheckRequest {}

message HealthCheckResponse {

    bool error = 1;
    int32 code = 2;
    string message = 3;

}
